--- a/gradle.properties
+++ b/gradle.properties
@@ -3,5 +3,6 @@ org.gradle.jvmargs=-Xmx1g
 # -------Plugins---------
 johnrengelmanShadow=7.1.2
 dependencyManagement=1.0.12.RELEASE
+springframeworkBoot=3.0.5
 # -------Versions--------
 guava=31.1-jre
